Bug 415903 - Blocking compositing rule not reapplied when changing window rules
Summary: Blocking compositing rule not reapplied when changing window rules
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: rules (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D26708
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-05 17:19 UTC by Kai Uwe Broulik
Modified: 2020-01-16 15:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
vlad.zahorodnii: Wayland-
vlad.zahorodnii: X11+
vlad.zahorodnii: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2020-01-05 17:19:53 UTC
SUMMARY
When adding a window rule to block compositing for a specific window, compositing does not turn off until the window is hidden and shown again.

STEPS TO REPRODUCE
1. Open some application window, e.g. Dolphin
2. In its window menu go to More Actions → Configure Special Window Settings
3. On the last tab (Appearance & Fixes) enable "Block compositing", "Apply", "Yes"
4. Hit Apply

OBSERVED RESULT
Nothing happens

EXPECTED RESULT
Compositing is suspended right away

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.17.80
KDE Frameworks Version: 5.56.0
Qt Version: 5.13.2

ADDITIONAL INFORMATION
Probably needs some form of `setBlockingCompositing(blockingCompositing())` call in applyWindowRules() which is "Used e.g. after the rules have been modified using the kcm."
Comment 1 Vlad Zahorodnii 2020-01-16 15:36:15 UTC
Git commit 8af3eef9cd9e5dcfcd39ae22b632db5ce56d8509 by Vlad Zahorodnii.
Committed on 16/01/2020 at 15:33.
Pushed by vladz into branch 'Plasma/5.18'.

[x11] Apply "Block compositing" rule right away

Summary:
When the user changes "Block compositing" rule, apply it immediately.

Reviewers: #kwin, davidedmundson

Reviewed By: #kwin, davidedmundson

Subscribers: kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D26708

M  +1    -1    abstract_client.h
M  +6    -0    x11client.cpp
M  +1    -0    x11client.h

https://commits.kde.org/kwin/8af3eef9cd9e5dcfcd39ae22b632db5ce56d8509